<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settings_fragment_root"
    tools:context=".SettingsFragment">

    <RadioGroup
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@android:color/black"
            android:layout_margin="8dp"
            android:text="@string/menu_settings_main" />

        <RadioButton
            android:id="@+id/setting_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@android:color/black"
            android:text="@string/menu_setting_one"/>
        <RadioButton
            android:id="@+id/setting_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@android:color/black"
            android:text="@string/menu_setting_two"/>
        <RadioButton
            android:id="@+id/setting_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@android:color/black"
            android:text="@string/menu_setting_three"/>
        <RadioButton
            android:id="@+id/setting_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@android:color/black"
            android:text="@string/menu_setting_four"/>
    </RadioGroup>
</FrameLayout>